package decodex.commands;

import decodex.data.Data;
import decodex.data.DataManager;
import decodex.data.exception.CommandException;
import decodex.modules.ModuleManager;
import decodex.recipes.RecipeManager;
import decodex.ui.Ui;
import decodex.ui.messages.ErrorMessages;

public class InputCommand extends Command {

    public static final String COMMAND_WORD = "input";

    private final String dataString;

    public InputCommand(String dataString) {
        super();
        this.dataString = dataString;
    }

    @Override
    public void run(DataManager dataManager, ModuleManager moduleManager, Ui ui, RecipeManager recipeManager)
            throws CommandException {
        if (dataString.isEmpty()) {
            throw new CommandException(ErrorMessages.MISSING_ARGUMENT);
        }

        Data userData = new Data(dataString);
        dataManager.setOriginalData(userData);

        ui.printInput(dataString);
    }
}
